feat: status bar

--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles/pages/index.css">
     <title>Home | Netflix</title>
 </head>
 <body>
-    <h1>Bem Vindos a pagina um</h1>
+    <div class="status-bar">
+        <p class="status-bar__time">9:41</p>
+        <div class="status-bar__icons">
+            <img src="./assets/icons/celular-connection.svg" alt="conexão celular">
+            <img src="./assets/icons/wifi-icon.svg" alt="Wif">
+            <img src="./assets/icons/battery.svg" alt="bateria">
+        </div>
+    </div>
+    
 </body>
 </html>
