--- a/index.html
+++ b/index.html
@@ -16,6 +16,34 @@
             <img src="./assets/icons/battery.svg" alt="bateria">
         </div>
     </div>
-    
+    <div class="bottom-navbar__background">
+        <div class="bottom-navbar">
+            <div class="bottom-navbar__icon">
+                <img src="./assets/icons/home.svg" alt="Home">
+                <p class="bottom-navbar__text">Home</p>
+            </div>
+
+            <div class="bottom-navbar__icon">
+                <img src="./assets/icons/search.svg" alt="Search">
+                <p class="bottom-navbar__text">Search</p>
+            </div>
+
+            <div class="bottom-navbar__icon">
+                <img src="./assets/icons/coming-soon.svg" alt="Search">
+                <p class="bottom-navbar__text">Coming Soon</p>
+            </div>
+
+            <div class="bottom-navbar__icon">
+                <img src="./assets/icons/downloads.svg" alt="Downloads">
+                <p class="bottom-navbar__text">Downloads</p>
+            </div>
+
+            <div class="bottom-navbar__icon">
+                <img src="./assets/icons/more.svg" alt="more">
+                <p class="bottom-navbar__text">More</p>
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
