feat: add movies templates and styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Home | Netflix</title>
 </head>
 <body>
+    <!-- Smartphone general status -->
     <div class="status-bar">
         <p class="status-bar__time">9:41</p>
         <div class="status-bar__icons">
@@ -16,6 +17,35 @@
             <img src="./assets/icons/battery.svg" alt="bateria">
         </div>
     </div>
+    <!-- end of smartphone general status -->
+
+    <!-- Movies list start -->    
+    <div class="movie" style="margin-bottom: 15px;">
+        <!-- Movies first  -->
+        <img class="movie__img"  src="./assets/images/movie01.png" alt="Vikings">
+        <img class="movie__img"  src="./assets/images/movie02.png" alt="Last Kings">
+        <img class="movie__img"  src="./assets/images/movie03.png" alt="Suits">
+        <img class="movie__img"  src="./assets/images/movie04.png" alt="Family guy">
+    </div>
+
+    <div class="movie" style="margin-bottom: 15px;">
+         <!-- Big Movies layout -->
+        <img class="movie__img--big"  src="./assets/images/movie01.png" alt="Vikings">
+        <img class="movie__img--big"  src="./assets/images/movie02.png" alt="Last Kings">
+        <img class="movie__img--big"  src="./assets/images/movie03.png" alt="Suits">
+        <img class="movie__img--big"  src="./assets/images/movie04.png" alt="Family guy">
+    </div>
+
+        <!-- Circle movies list -->
+    <div class="movie" style="margin-bottom: 15px;">
+        <img class="movie__img--circle"  src="./assets/images/movie01.png" alt="Vikings">
+        <img class="movie__img--circle"  src="./assets/images/movie02.png" alt="Last Kings">
+        <img class="movie__img--circle"  src="./assets/images/movie03.png" alt="Suits">
+        <img class="movie__img--circle"  src="./assets/images/movie04.png" alt="Family guy">
+    </div>
+    <!-- Movie list end -->
+
+    <!-- bottom navigation -->
     <div class="bottom-navbar__background">
         <div class="bottom-navbar">
             <div class="bottom-navbar__icon">
@@ -45,5 +75,6 @@
 
         </div>
     </div>
+    <!-- end of bottom navigation -->
 </body>
 </html>
