--- a/index.html
+++ b/index.html
@@ -19,17 +19,26 @@
     </div>
     <!-- end of smartphone general status -->
 
+    <!-- Start Navigation bar -->
+    <div class="navbar" style="margin-bottom: 15px;">
+        <img src="./assets/images/logoNetflix.png" alt="Logo Netflix" class="navbar__img">
+        <p class="navbar__text">TV Shows</p>
+        <p class="navbar__text">Movies</p>
+        <p class="navbar__text">My List</p>
+    </div> 
+    <!-- End Navigation bar -->
+
     <!-- Movies list start -->    
+         <!-- Movies first  -->
     <div class="movie" style="margin-bottom: 15px;">
-        <!-- Movies first  -->
         <img class="movie__img"  src="./assets/images/movie01.png" alt="Vikings">
         <img class="movie__img"  src="./assets/images/movie02.png" alt="Last Kings">
         <img class="movie__img"  src="./assets/images/movie03.png" alt="Suits">
         <img class="movie__img"  src="./assets/images/movie04.png" alt="Family guy">
     </div>
 
-    <div class="movie" style="margin-bottom: 15px;">
          <!-- Big Movies layout -->
+    <div class="movie" style="margin-bottom: 15px;">
         <img class="movie__img--big"  src="./assets/images/movie01.png" alt="Vikings">
         <img class="movie__img--big"  src="./assets/images/movie02.png" alt="Last Kings">
         <img class="movie__img--big"  src="./assets/images/movie03.png" alt="Suits">
