feat: play components

--- a/index.html
+++ b/index.html
@@ -28,6 +28,35 @@
     </div> 
     <!-- End Navigation bar -->
 
+    <!-- Start of Play component -->
+    <div class="play" style="margin-bottom: 15px;">
+        <!-- Create Title with top -->
+        <div class="play__top">
+            <img src="./assets/icons/top10.svg" alt="Top 10">
+            <p class="play__title">#3 in Brazil Today</p>
+        </div>
+        <!-- Main buttons play div -->
+        <div class="play__bottom">
+            <!-- Create icon plus div -->
+            <div class="play__icon">
+                <img src="./assets/icons/plus.svg" alt="Mais">
+                <p class="play__text">My List</p>
+            </div>
+
+            <!-- create play button  -->
+            <div class="play-button">
+                <img src="./assets/icons/play.svg" alt="Play" class="play-button__img">
+                <p class="play-button__text">Play</p>
+            </div>
+            <!-- Create icon info div -->
+            <div class="play__icon">
+                <img src="./assets/icons/info.svg" alt="Info">
+                <p class="play__text">Info</p>
+            </div>
+        </div>
+    </div>
+    <!-- End of Play component -->
+
     <!-- Movies list start -->    
          <!-- Movies first  -->
     <div class="movie" style="margin-bottom: 15px;">
