feat: search movies components

--- a/index.html
+++ b/index.html
@@ -57,6 +57,49 @@
     </div>
     <!-- End of Play component -->
 
+    <!-- Starting Movie Search area -->
+        <!-- Movie 01 -->
+    <div class="search-movie__background">
+        <div class="search-movie" style="margin-bottom: 5px;">
+            <img src="/assets/images/movie-search01.png" alt="Ozark" class="search-movie__img">
+            <div class="search-movie__play">
+                <h1>Ozark</h1>
+                <img src="./assets/icons/play-search.svg" alt="Botão play">
+            </div>
+        </div>
+    </div>
+        <!-- Movie 02 -->
+        <div class="search-movie__background">
+            <div class="search-movie" style="margin-bottom: 5px;">
+                <img src="/assets/images/movie-search02.png" alt="Breaking Bad" class="search-movie__img">
+                <div class="search-movie__play">
+                    <h1>Breaking Bad</h1>
+                    <img src="./assets/icons/play-search.svg" alt="Botão play">
+                </div>
+            </div>
+        </div>
+        <!-- Movie 03 -->
+        <div class="search-movie__background">
+            <div class="search-movie" style="margin-bottom: 5px;">
+                <img src="/assets/images/movie-search03.png" alt="The Governor" class="search-movie__img">
+                <div class="search-movie__play">
+                    <h1>The Governor</h1>
+                    <img src="./assets/icons/play-search.svg" alt="Botão play">
+                </div>
+            </div>
+        </div>
+        <!-- Movie 04 -->
+        <div class="search-movie__background">
+            <div class="search-movie" style="margin-bottom: 15px;">
+                <img src="/assets/images/movie-search04.png" alt="Your Excellency" class="search-movie__img">
+                <div class="search-movie__play">
+                    <h1>Your Excellency</h1>
+                    <img src="./assets/icons/play-search.svg" alt="Botão play">
+                </div>
+            </div>
+        </div>
+    <!-- Ending Movie Search area -->
+
     <!-- Movies list start -->    
          <!-- Movies first  -->
     <div class="movie" style="margin-bottom: 15px;">
