feat: created profile--grid and profile__img--big

--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
      <!-- end of smartphone general status -->
 
     <!-- Create Login profiles -->
-    <div class="profile">
+    <div class="profile" style="margin-bottom: 20px;">
             <!-- Profile 01 -->
         <div class="profile__group">
             <img src="./assets/images/profile01.png" alt="Perfil: Emanalo" class="profile__img">
@@ -51,5 +51,38 @@
         </div>
     </div>
 
+
+    <!-- Create Second version of Profile Login-->
+    <div class="profile--grid">
+        <!-- Profile 01 -->
+    <div class="profile__group">
+        <img src="./assets/images/profile01.png" alt="Perfil: Emanalo" class="profile__img--big">
+        <h2 class="profile__text">Emanalo</h2>
+    </div>
+
+        <!-- Profile 02 -->
+    <div class="profile__group">
+        <img src="./assets/images/profile02.png" alt="Perfil: Onyeka" class="profile__img--big">
+        <h2 class="profile__text">Onyeka</h2>
+    </div>
+
+        <!-- Profile 03 -->
+    <div class="profile__group">
+        <img src="./assets/images/profile03.png" alt="Perfil: Thelma" class="profile__img--big">
+        <h2 class="profile__text">Thelma</h2>
+    </div>
+
+        <!-- Profile Kids -->
+    <div class="profile__group">
+        <img src="./assets/images/profilekids.png" alt="Perfil: Kids" class="profile__img--big">
+        <h2 class="profile__text">Kids</h2>
+    </div>
+
+        <!-- ADD Profile -->
+    <div class="profile__group">
+        <img src="./assets/images/AddprofileV2.png" alt="Adicionar perfil" class="profile__img--big">
+        <h2 class="profile__text">Add Profile</h2>
+    </div>
+</div>
 </body>
 </html>
