--- a/login.html
+++ b/login.html
@@ -19,6 +19,7 @@
      </div>
      <!-- end of smartphone general status -->
 
+<div id="animation">
     <!-- Create Login profiles -->
     <div class="profile" style="margin-bottom: 20px;">
             <!-- Profile 01 -->
@@ -54,34 +55,35 @@
 
     <!-- Create Second version of Profile Login-->
     <div class="profile--grid">
-        <!-- Profile 01 -->
-    <div class="profile__group">
-        <img src="./assets/images/profile01.png" alt="Perfil: Emanalo" class="profile__img profile__img--big">
-        <h2 class="profile__text">Emanalo</h2>
-    </div>
+            <!-- Profile 01 -->
+        <div class="profile__group">
+            <img src="./assets/images/profile01.png" alt="Perfil: Emanalo" class="profile__img profile__img--big">
+            <h2 class="profile__text">Emanalo</h2>
+        </div>
 
-        <!-- Profile 02 -->
-    <div class="profile__group">
-        <img src="./assets/images/profile02.png" alt="Perfil: Onyeka" class="profile__img profile__img--big">
-        <h2 class="profile__text">Onyeka</h2>
-    </div>
+            <!-- Profile 02 -->
+        <div class="profile__group">
+            <img src="./assets/images/profile02.png" alt="Perfil: Onyeka" class="profile__img profile__img--big">
+            <h2 class="profile__text">Onyeka</h2>
+        </div>
 
-        <!-- Profile 03 -->
-    <div class="profile__group">
-        <img src="./assets/images/profile03.png" alt="Perfil: Thelma" class="profile__img profile__img--big">
-        <h2 class="profile__text">Thelma</h2>
-    </div>
+            <!-- Profile 03 -->
+        <div class="profile__group">
+            <img src="./assets/images/profile03.png" alt="Perfil: Thelma" class="profile__img profile__img--big">
+            <h2 class="profile__text">Thelma</h2>
+        </div>
 
-        <!-- Profile Kids -->
-    <div class="profile__group">
-        <img src="./assets/images/profilekids.png" alt="Perfil: Kids" class="profile__img profile__img--big">
-        <h2 class="profile__text">Kids</h2>
-    </div>
+            <!-- Profile Kids -->
+        <div class="profile__group">
+            <img src="./assets/images/profilekids.png" alt="Perfil: Kids" class="profile__img profile__img--big">
+            <h2 class="profile__text">Kids</h2>
+        </div>
 
-        <!-- ADD Profile -->
-    <div class="profile__group">
-        <img src="./assets/images/AddprofileV2.png" alt="Adicionar perfil" class="profile__img profile__img--big">
-        <h2 class="profile__text">Add Profile</h2>
+            <!-- ADD Profile -->
+        <div class="profile__group">
+            <img src="./assets/images/AddprofileV2.png" alt="Adicionar perfil" class="profile__img profile__img--big">
+            <h2 class="profile__text">Add Profile</h2>
+        </div>
     </div>
 </div>
 </body>
