feat: search input component

--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
     </div>
     <!-- End of Play component -->
 
+    <!-- Start Input component -->
+    <div class="search-input__background" style="margin-bottom: 15px;">
+        <div class="search-input">
+            <img src="./assets/icons/search-input.svg" alt="lupa de busca" class="search-input__img">
+            <input type="text" class="search-input__input" placeholder="Search for a show, movie, genre, e.t.c.">
+            <img src="./assets/icons/mic.svg" alt="img microfone" class="search-input__img">
+        </div>
+    </div>
+    <!-- End |Input component -->
+
     <!-- Starting Movie Search area -->
         <!-- Movie 01 -->
     <div class="search-movie__background">
