--- a/index.html
+++ b/index.html
@@ -19,153 +19,8 @@
     </div>
     <!-- end of smartphone general status -->
 
-    <!-- Start Navigation bar -->
-    <div class="navbar" style="margin-bottom: 15px;">
-        <img src="./assets/images/logoNetflix.png" alt="Logo Netflix" class="navbar__img">
-        <p class="navbar__text">TV Shows</p>
-        <p class="navbar__text">Movies</p>
-        <p class="navbar__text">My List</p>
-    </div> 
-    <!-- End Navigation bar -->
-
-    <!-- Start of Play component -->
-    <div class="play" style="margin-bottom: 15px;">
-        <!-- Create Title with top -->
-        <div class="play__top">
-            <img src="./assets/icons/top10.svg" alt="Top 10">
-            <p class="play__title">#3 in Brazil Today</p>
-        </div>
-        <!-- Main buttons play div -->
-        <div class="play__bottom">
-            <!-- Create icon plus div -->
-            <div class="play__icon">
-                <img src="./assets/icons/plus.svg" alt="Mais">
-                <p class="play__text">My List</p>
-            </div>
-
-            <!-- create play button  -->
-            <div class="play-button">
-                <img src="./assets/icons/play.svg" alt="Play" class="play-button__img">
-                <p class="play-button__text">Play</p>
-            </div>
-            <!-- Create icon info div -->
-            <div class="play__icon">
-                <img src="./assets/icons/info.svg" alt="Info">
-                <p class="play__text">Info</p>
-            </div>
-        </div>
-    </div>
-    <!-- End of Play component -->
-
-    <!-- Start Input component -->
-    <div class="search-input__background" style="margin-bottom: 15px;">
-        <div class="search-input">
-            <img src="./assets/icons/search-input.svg" alt="lupa de busca" class="search-input__img">
-            <input type="text" class="search-input__input" placeholder="Search for a show, movie, genre, e.t.c.">
-            <img src="./assets/icons/mic.svg" alt="img microfone" class="search-input__img">
-        </div>
-    </div>
-    <!-- End |Input component -->
-
-    <!-- Starting Movie Search area -->
-        <!-- Movie 01 -->
-    <div class="search-movie__background">
-        <div class="search-movie" style="margin-bottom: 5px;">
-            <img src="/assets/images/movie-search01.png" alt="Ozark" class="search-movie__img">
-            <div class="search-movie__play">
-                <h1>Ozark</h1>
-                <img src="./assets/icons/play-search.svg" alt="Botão play">
-            </div>
-        </div>
-    </div>
-        <!-- Movie 02 -->
-        <div class="search-movie__background">
-            <div class="search-movie" style="margin-bottom: 5px;">
-                <img src="/assets/images/movie-search02.png" alt="Breaking Bad" class="search-movie__img">
-                <div class="search-movie__play">
-                    <h1>Breaking Bad</h1>
-                    <img src="./assets/icons/play-search.svg" alt="Botão play">
-                </div>
-            </div>
-        </div>
-        <!-- Movie 03 -->
-        <div class="search-movie__background">
-            <div class="search-movie" style="margin-bottom: 5px;">
-                <img src="/assets/images/movie-search03.png" alt="The Governor" class="search-movie__img">
-                <div class="search-movie__play">
-                    <h1>The Governor</h1>
-                    <img src="./assets/icons/play-search.svg" alt="Botão play">
-                </div>
-            </div>
-        </div>
-        <!-- Movie 04 -->
-        <div class="search-movie__background">
-            <div class="search-movie" style="margin-bottom: 15px;">
-                <img src="/assets/images/movie-search04.png" alt="Your Excellency" class="search-movie__img">
-                <div class="search-movie__play">
-                    <h1>Your Excellency</h1>
-                    <img src="./assets/icons/play-search.svg" alt="Botão play">
-                </div>
-            </div>
-        </div>
-    <!-- Ending Movie Search area -->
-
-    <!-- Movies list start -->    
-         <!-- Movies first  -->
-    <div class="movie" style="margin-bottom: 15px;">
-        <img class="movie__img"  src="./assets/images/movie01.png" alt="Vikings">
-        <img class="movie__img"  src="./assets/images/movie02.png" alt="Last Kings">
-        <img class="movie__img"  src="./assets/images/movie03.png" alt="Suits">
-        <img class="movie__img"  src="./assets/images/movie04.png" alt="Family guy">
-    </div>
-
-         <!-- Big Movies layout -->
-    <div class="movie" style="margin-bottom: 15px;">
-        <img class="movie__img--big"  src="./assets/images/movie01.png" alt="Vikings">
-        <img class="movie__img--big"  src="./assets/images/movie02.png" alt="Last Kings">
-        <img class="movie__img--big"  src="./assets/images/movie03.png" alt="Suits">
-        <img class="movie__img--big"  src="./assets/images/movie04.png" alt="Family guy">
-    </div>
-
-        <!-- Circle movies list -->
-    <div class="movie" style="margin-bottom: 15px;">
-        <img class="movie__img--circle"  src="./assets/images/movie01.png" alt="Vikings">
-        <img class="movie__img--circle"  src="./assets/images/movie02.png" alt="Last Kings">
-        <img class="movie__img--circle"  src="./assets/images/movie03.png" alt="Suits">
-        <img class="movie__img--circle"  src="./assets/images/movie04.png" alt="Family guy">
-    </div>
-    <!-- Movie list end -->
-
-    <!-- bottom navigation -->
-    <div class="bottom-navbar__background">
-        <div class="bottom-navbar">
-            <div class="bottom-navbar__icon">
-                <img src="./assets/icons/home.svg" alt="Home">
-                <p class="bottom-navbar__text">Home</p>
-            </div>
-
-            <div class="bottom-navbar__icon">
-                <img src="./assets/icons/search.svg" alt="Search">
-                <p class="bottom-navbar__text">Search</p>
-            </div>
-
-            <div class="bottom-navbar__icon">
-                <img src="./assets/icons/coming-soon.svg" alt="Search">
-                <p class="bottom-navbar__text">Coming Soon</p>
-            </div>
-
-            <div class="bottom-navbar__icon">
-                <img src="./assets/icons/downloads.svg" alt="Downloads">
-                <p class="bottom-navbar__text">Downloads</p>
-            </div>
-
-            <div class="bottom-navbar__icon">
-                <img src="./assets/icons/more.svg" alt="more">
-                <p class="bottom-navbar__text">More</p>
-            </div>
-
-        </div>
-    </div>
-    <!-- end of bottom navigation -->
+    <a href="./home.html" class="center">
+        <img src="./assets/icons/logo.svg" alt="Logo Netflix" class="logo">
+    </a>
 </body>
 </html>
