fix: link to profile page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <!-- end of smartphone general status -->
 
-    <a href="./home.html" class="center">
+    <a href="./profile.html" class="center">
         <img src="./assets/icons/logo.svg" alt="Logo Netflix" class="logo">
     </a>
 </body>
