--- a/home.html
+++ b/home.html
@@ -134,10 +134,10 @@
                 <p class="bottom-navbar__text">Home</p>
             </div>
 
-            <div class="bottom-navbar__icon">
+            <a href="./search.html" class="bottom-navbar__icon">
                 <img src="./assets/icons/search.svg" alt="Search">
                 <p class="bottom-navbar__text">Search</p>
-            </div>
+            </a>
 
             <div class="bottom-navbar__icon">
                 <img src="./assets/icons/coming-soon.svg" alt="Search">
