--- a/home.html
+++ b/home.html
@@ -130,8 +130,8 @@
     <div class="bottom-navbar__background">
         <div class="bottom-navbar">
             <div class="bottom-navbar__icon">
-                <img src="./assets/icons/home.svg" alt="Home">
-                <p class="bottom-navbar__text">Home</p>
+                <img src="./assets/icons/home-active.svg" alt="Home">
+                <p class="bottom-navbar__text bottom-navbar__text--active">Home</p>
             </div>
 
             <a href="./search.html" class="bottom-navbar__icon">
